deploy/project-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web   
  template:
    metadata:
      labels:
        component: web  
    spec:
      containers:
      - name: project
        image: dina2022/website
