deploy/project-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-node-port
spec:
  selector:
    component: web
  ports:
  - name: node-port
    port: 8080
    targetPort: 80
  type: NodePort
