deploy/project-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: project-service
spec:
    type: ClusterIP
    selector:
      component: web
    ports:
      - port: 80
